Creacion capa de servicio, capa de servicio implementada para Users,Patients y Doctors

--- a/MedicalAppointment.users.api/MedicalAppointment.Users.api.csproj
+++ b/MedicalAppointment.users.api/MedicalAppointment.Users.api.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedicalAppoiments.Persistance\MedicalAppoiments.Persistance.csproj" />
+    <ProjectReference Include="..\MedicalAppointment.Application.cs\MedicalAppointment.Application.csproj" />
   </ItemGroup>
 
 </Project>
