--- a/MedicalAppointment.system.api/MedicalAppointment.system.api.csproj
+++ b/MedicalAppointment.system.api/MedicalAppointment.system.api.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedicalAppoiments.Persistance\MedicalAppoiments.Persistance.csproj" />
+    <ProjectReference Include="..\MedicalAppointment.Application.cs\MedicalAppointment.Application.csproj" />
   </ItemGroup>
 
 </Project>
