--- a/MedicalAppoiments.Persistance/MedicalAppoiments.Persistance.csproj
+++ b/MedicalAppoiments.Persistance/MedicalAppoiments.Persistance.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\MedicalsModels\**" />
+    <EmbeddedResource Remove="Models\MedicalsModels\**" />
+    <None Remove="Models\MedicalsModels\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Exceptions\" />
-    <Folder Include="Models\MedicalsModels\" />
   </ItemGroup>
 
   <ItemGroup>
